fix pixelated lightning bolts and changed spacing

--- a/components/homepage/Lightning.module.css
+++ b/components/homepage/Lightning.module.css
@@ -1,4 +1,4 @@
 .lightning {
     background-color: transparent;
-    z-index: 10;
+    z-index: -99;
 }
